objects/Encounter__c.object
<CustomObject>
    <fields>
        <fullName>Admitting_NPIs__c</fullName>
        <label>Admitting NPIs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attending_NPIs__c</fullName>
        <label>Attending NPIs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_SelectedHospitalCodes__c</fullName>
        <label>Selected Hospital Codes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_ServiceLine__c</fullName>
        <label>Service Line</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_SubServiceLine__c</fullName>
        <label>Sub Service Line</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Encounters</relationshipLabel>
        <relationshipName>Encounters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Discharge_Date_Ranges__c</fullName>
        <label>Discharge Date Ranges</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discharge_Date_To__c</fullName>
        <label>TO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discharge_Date__c</fullName>
        <label>From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discharge_Date_encounter__c</fullName>
        <label>Discharge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ED_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ED Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_Facility_IDs__c</fullName>
        <label>Exclude Facility ID&apos;s</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exclude_Physician_NPIs__c</fullName>
        <label>Exclude Physician NPI&apos;s</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HospitalIds__c</fullName>
        <label>Hospital Ids</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hospital_IDs__c</fullName>
        <label>Hospitals</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>5000</fullName>
                </value>
                <value>
                    <fullName>4000</fullName>
                </value>
                <value>
                    <fullName>3000</fullName>
                </value>
                <value>
                    <fullName>2000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hospital_Names__c</fullName>
        <label>Hospital</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Include_Facility_ID__c</fullName>
        <label>Include Facility ID&apos;s</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Include_Physician_NPIs__c</fullName>
        <label>Include Physician NPI&apos;s</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Labor_and_Delivery_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Labor and Delivery Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_ER_Encounters_ranges__c</fullName>
        <label>No of ER Encounters ranges</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Normal_Newborn_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Normal Newborn Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_ER_Encounters__c</fullName>
        <label>Number of ER Encounters</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_ER_Encounters_to__c</fullName>
        <label>Number of ER Encounters_to</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <label>Patient Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>In Patient</fullName>
                </value>
                <value>
                    <fullName>Out Patient</fullName>
                </value>
                <value>
                    <fullName>In Patient(IP)</fullName>
                    <isActive>false</isActive>
                    <label>In Patient(IP)</label>
                </value>
                <value>
                    <fullName>Out Patient(OP)</fullName>
                    <isActive>false</isActive>
                    <label>Out Patient(OP)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payor_Type__c</fullName>
        <label>Most Recent Primary Payor Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CHARITY</fullName>
                </value>
                <value>
                    <fullName>MANAGED CARE</fullName>
                </value>
                <value>
                    <fullName>MANAGED EXCHANGE</fullName>
                </value>
                <value>
                    <fullName>MEDICAID</fullName>
                </value>
                <value>
                    <fullName>MEDICAID MANAGED CARE</fullName>
                </value>
                <value>
                    <fullName>MEDICARE</fullName>
                </value>
                <value>
                    <fullName>MEDICARE MANAGED CARE</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
                <value>
                    <fullName>SELF PAY/UNINSURED</fullName>
                </value>
                <value>
                    <fullName>UNKNOWN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_NPIs__c</fullName>
        <label>Primary NPIs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Surgery_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Surgery Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_discharge_date_encounter__c</fullName>
        <label>To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Wunderman_Preferred_Hospitals__c</fullName>
        <label>Wunderman Preferred Hospitals</label>
        <type>TextArea</type>
    </fields>
    <label>Encounter</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Encounters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>